--- a/src/Components/Bg/Bg.scss
+++ b/src/Components/Bg/Bg.scss
@@ -1,9 +1,17 @@
+$mobile_height: 400vh;
+
 .bg {
-  background-image: url(../../Images/desktop_background.jpg);
+  background-image: url(../../Images/mobile_background.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   width: 100%;
-  height: 100vh;
-  filter: blur(2px) grayscale(20%);
+  height: $mobile_height;
+  min-width: 320px;
+}
+
+.bg_filter {
+  background-color: rgba(0, 0, 0, 0.589);
+  width: 100%;
+  height: $mobile_height;
 }
