--- a/src/Components/Header1st/Header1st.scss
+++ b/src/Components/Header1st/Header1st.scss
@@ -2,13 +2,29 @@
 @import "../../Partials/Partials.scss";
 
 .header1st {
-  position: absolute;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  height: 50vh;
-  width: 50vw;
-  font-size: 3rem;
-  font-weight: bold;
-  z-index: 1;
+  @include for-mobile {
+    position: absolute;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 50vh;
+    width: 82vw;
+    font-size: 3rem;
+    font-weight: bold;
+    z-index: 1;
+    padding: 1rem;
+  }
+}
+
+.link_border {
+  border: 2px solid $Links;
+  width: auto;
+  height: auto;
+  padding: 0.5rem;
+  border-radius: 20px;
+  margin: 1rem;
+}
+
+.link_border:hover {
+  border: 2px solid $Links_hover;
 }
