--- a/src/Partials/Colors.scss
+++ b/src/Partials/Colors.scss
@@ -1,2 +1,4 @@
 $Links: Gold;
-// $PrimaColor:
+$Links_hover: rgb(255, 240, 154);
+$theme_title: rgb(158, 255, 158);
+$theme_shape: rgba(158, 255, 158, 0.363);
