--- a/src/Partials/Colors.scss
+++ b/src/Partials/Colors.scss
@@ -1,4 +1,4 @@
-$Links: Gold;
+$Links: rgb(255, 238, 139);
 $Links_hover: rgb(255, 240, 154);
-$theme_title: rgb(158, 255, 158);
-$theme_shape: rgba(158, 255, 158, 0.363);
+$theme_title: rgb(144, 255, 144);
+$theme_shape: rgba(158, 255, 158, 0.185);
