--- a/src/Components/Bg/Bg.scss
+++ b/src/Components/Bg/Bg.scss
@@ -1,7 +1,7 @@
-$mobile_height: 370vh;
+$mobile_height: 200vh;
 
 .bg {
-  background-image: url(../../Images/mobile_background.jpg);
+  background-image: url(../../Images/forestpath.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -11,7 +11,7 @@ $mobile_height: 370vh;
 }
 
 .bg_filter {
-  background-color: rgba(0, 0, 0, 0.589);
+  background-color: rgba(0, 0, 0, 0.719);
   width: 100%;
   height: $mobile_height;
 }
