--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -1,3 +1,5 @@
+@import "../../Partials/Partials.scss";
+
 .footer {
   height: auto;
   width: 100%;
@@ -10,12 +12,18 @@
   text-align: center;
   background-color: black;
   color: white;
+  @include for-tablet {
+    font-size: 2rem;
+  }
 
   &__contact {
     height: auto;
     width: 100%;
     font-size: 0.8rem;
     border-bottom: 1px solid white;
+    @include for-tablet {
+      font-size: 1.5rem;
+    }
   }
 }
 
@@ -29,4 +37,7 @@
   padding: 0.5rem;
   width: 100%;
   font-size: 0.7rem;
+  @include for-tablet {
+    font-size: 1rem;
+  }
 }
