--- a/src/Pages/Home/Home.scss
+++ b/src/Pages/Home/Home.scss
@@ -116,11 +116,34 @@ h3 {
 }
 
 .bodytext {
+  color: $theme_title;
+  font-size: 1.3rem;
+  padding: 1rem;
   @include for-tablet {
     font-size: 2rem;
     width: 80%;
     padding: 4rem;
     color: $theme_title;
+  }
+  @include for-desktop {
+    font-size: 3rem;
+  }
+}
+
+.Iframe {
+  width: 100%;
+  height: 500px;
+  border: 0;
+  border-radius: 4px;
+  overflow: hidden;
+}
+
+.bodylinks {
+  font-size: 1.3rem;
+  padding: 1rem;
+  @include for-tablet {
+    padding: 4rem;
+    font-size: 2rem;
   }
   @include for-desktop {
     font-size: 3rem;
