--- a/src/Pages/Home/Home.scss
+++ b/src/Pages/Home/Home.scss
@@ -5,7 +5,7 @@
   top: 10%;
   position: absolute;
   background-color: rgba(216, 66, 66, 0);
-  height: 150vh;
+  height: 160vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
@@ -18,10 +18,6 @@ h4 {
   padding: 0.5rem;
   color: $theme_title;
 }
-
-// .para1:hover {
-
-// }
 
 .home__name {
   height: 2vh;
@@ -119,6 +115,8 @@ h3 {
   color: $theme_title;
   font-size: 1.3rem;
   padding: 1rem;
+  display: flex;
+  justify-content: center;
   @include for-tablet {
     font-size: 2rem;
     width: 80%;
@@ -126,10 +124,16 @@ h3 {
     color: $theme_title;
   }
   @include for-desktop {
-    font-size: 3rem;
+    font-size: 2rem;
   }
 }
 
+.bodytext__list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+}
 .Iframe {
   width: 100%;
   height: 500px;
@@ -150,6 +154,7 @@ h3 {
   }
 }
 
-li {
+.examples {
   display: flex;
+  flex-direction: column;
 }
